--- a/viewMessage.html
+++ b/viewMessage.html
@@ -84,7 +84,7 @@
 	</style>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Open+Sans+Condensed:300" rel="stylesheet" type="text/css" />
 
-		<body style="background:#f0f0f0"><script src="https://sugardaddylocal.com/custom_menu_updated.js"></script>
+		<body style="background:#f0f0f0"><script src="https://m.onesugardaddy.com/custom_menu_no_header.js"></script>
 
 	<div class="page-loader">
 		<img src="https://lushmatch.com/assets/img/loader.gif" alt="">
@@ -97,10 +97,7 @@
 			<div class="col-md-3" id="tt" style="width:500px;background:#fff!Important;font-family:Open Sans!Important;margin:auto;left:0;right:0;position:fixed">
 				<table align=center>
 					<tr>
-						<td style="width:10%;text-align:center">
-							<a href="javascript:show_attach()"><i style="font-size:2em" class="fa fa-paperclip"></i></a>
-						</td>
-						<td id="cp"  style="width:80%">
+						<td id="cp"  style="width:90%">
 							<textarea style="width:100%" id="mail_pad"></textarea>
 						</td>
 						<td style="width:10%;text-align:center">
@@ -111,13 +108,12 @@
 			</div>
 		</div> 
 	</div>
-
+<form action="http://lushmatch.com/self_uploads.php"  style="width:100%;border:none;background:none" class="dropzone dz-preview" id="member"></form>
 <div id="cover" style="display:none;position:fixed;width:100%;height:100%;background:#000;opacity:0.7;z-index:99999999;top:0;left:0;bottom:0;right:0"></div>
 <div id="send_sms" onkeyup="deduct()" class="modal_window" style="font-size:0.8em;padding:10px;border-radius:6px;position:absolute;z-index:9999999999999;display:none;background:#f0f0f0;top:50px;left:0;right:0;margin:auto;width:320px;max-width:320px;height:500px;font-family:Open Sans;font-size:24px;"><span id="tip" style='color:brown;font-family:Open Sans'>SEND ANONYMOUS SMS<br><br><span style="font-size:18px;color:#333;font-family:Open Sans">1. Your number will not be revealed</span></span><br><div contentEditable onblur='fill_txt()' onclick='erase_txt()' id='message_text' style='word-wrap:break-word;font-family:Open Sans;font-size:24px;contentEditable:true;color:#0093D9;cursor:hand;cursor:pointer;border-radius:4px;border:3px solid lightblue;height:170px;max-height:170px;color:#333;overflow-y:scroll;overflow-x:hidden;color:grey;background:#fff;padding:20px;background:#fff'>Type Message Here</div><div><span style="left:20px;position:absolute">CHARACTERS REMAINING: <b><span id="cr">160</span></b></span></div><br><br><div style='margin-top:10px'><span style="font-size:16px"  class="btn btn-info" onclick='send_sms()' id="send_mail">SEND</span>&nbsp;<span style="font-size:16px"  class="btn btn-danger" onclick="document.all.modal_text.style.display='none'" id="">GO BACK</span></div></div>
 
 <div id="loader" style="display:none;z-index:99999999999999999;position:absolute;top:0;left:0;right:0;bottom:0;opacity:0.3;margin:auto;background:#000;font-family:Open Sans Condensed;"></div>
 <img id="img_loader" style="display:none;z-index:999999999999999999;position:absolute;top:0;left:0;right:0;bottom:0;opacity:1;margin:auto;width:50px" src="https://lushmatch.com/assets/images/wait.gif">
-	<iframe id="iqdz" src="add_photo.html" style="position:fixed;top:50px;width:100%;border:none;z-index:999999999999999999999;display:none"></iframe>
 
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://lushmatch.com/assets/js/jquery-ui.js"></script>
