--- a/viewMessage.html
+++ b/viewMessage.html
@@ -97,18 +97,21 @@
 			<div class="col-md-3" id="tt" style="width:500px;background:#fff!Important;font-family:Open Sans!Important;margin:auto;left:0;right:0;position:fixed">
 				<table align=center>
 					<tr>
-						<td id="cp"  style="width:90%">
+						<td id="ap"  style="width:10%">
+							<img onclick="javascript:satc()" src="images/pc.png" style="width:10px;margin-left:5px;margin-right:5px">
+						</td>
+						<td id="cp"  style="width:80%">
 							<textarea style="width:100%" id="mail_pad"></textarea>
 						</td>
 						<td style="width:10%;text-align:center">
-							<a id="x_send" href="javascript:send_message()"><i style="font-size:2em" class="fa fa-paper-plane"></i></a>
+							<a id="x_send" href="javascript:send_message()"><i style="font-size:2em;margin-left:5px;margin-right:5px" class="fa fa-paper-plane"></i></a>
 						</td>
 					</tr>
 				</table>
 			</div>
 		</div> 
 	</div>
-<form action="http://lushmatch.com/self_uploads.php"  style="width:100%;border:none;background:none" class="dropzone dz-preview" id="member"></form>
+<form action="http://lushmatch.com/mail_uploads.php"  style="width:100%;border:none;background:#fff;display:none" class="dropzone dz-preview" id="member"></form>
 <div id="cover" style="display:none;position:fixed;width:100%;height:100%;background:#000;opacity:0.7;z-index:99999999;top:0;left:0;bottom:0;right:0"></div>
 <div id="send_sms" onkeyup="deduct()" class="modal_window" style="font-size:0.8em;padding:10px;border-radius:6px;position:absolute;z-index:9999999999999;display:none;background:#f0f0f0;top:50px;left:0;right:0;margin:auto;width:320px;max-width:320px;height:500px;font-family:Open Sans;font-size:24px;"><span id="tip" style='color:brown;font-family:Open Sans'>SEND ANONYMOUS SMS<br><br><span style="font-size:18px;color:#333;font-family:Open Sans">1. Your number will not be revealed</span></span><br><div contentEditable onblur='fill_txt()' onclick='erase_txt()' id='message_text' style='word-wrap:break-word;font-family:Open Sans;font-size:24px;contentEditable:true;color:#0093D9;cursor:hand;cursor:pointer;border-radius:4px;border:3px solid lightblue;height:170px;max-height:170px;color:#333;overflow-y:scroll;overflow-x:hidden;color:grey;background:#fff;padding:20px;background:#fff'>Type Message Here</div><div><span style="left:20px;position:absolute">CHARACTERS REMAINING: <b><span id="cr">160</span></b></span></div><br><br><div style='margin-top:10px'><span style="font-size:16px"  class="btn btn-info" onclick='send_sms()' id="send_mail">SEND</span>&nbsp;<span style="font-size:16px"  class="btn btn-danger" onclick="document.all.modal_text.style.display='none'" id="">GO BACK</span></div></div>
 
@@ -123,9 +126,9 @@
 <script src="https://lushmatch.com/assets/js/scripts.js"></script>
 <script src="https://sugardaddylocal.com/jsSocketNode.js"></script> <script src="track.js"></script>
 <script src="https://lushmatch.com/assets/js/jquery-confirm.min.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-pdjniiApMjAV7j92Nfn5zgd3k2s3ze4&libraries=places" type="text/javascript"></script>
-<script src="https://lushmatch.com/dz/dropzone.min.js"></script>
-<script>
+	<script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
+	<link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css">
+		<script>
 	window.onkeypress=che
 	function che (e) {
 	  if (e.target.id=='mail_pad') {
@@ -134,6 +137,106 @@
 		  }
 	  }
 	}
+	Dropzone.autoDiscover=false
+	var sites
+	var imagesUploaded
+	var r,k,c,t2,t3,t4,intr=50,currImg
+	var rat=1
+	var rx=0, t, ext
+	var set=false
+	var usr_img=[]
+	
+	function satc() {
+		$('#member').click()
+	}
+	function guid(){
+		j=16
+		var op=''
+		var arr=new Array('a','b','c','d','e','f','i','j','k','m','n','p','q','r','s','t','u','v','w','x','y','z',0,1,2,3,4,5,6,7,8,9,0,0,1,2,3,4,5,6,7,8,9,0)
+		for (k=0;k<j;k++) {
+			var inx=randomIntFromInterval(0,arr.length-1)
+			op += arr[inx]
+		}
+		return op;
+	}
+		
+		function qs(name, url) {
+			if (!url) {
+			  url = window.location.href;
+			}
+			name = name.replace(/[\[\]]/g, "\\$&");
+			var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+				results = regex.exec(url);
+			if (!results) return null;
+			if (!results[2]) return '';
+			return decodeURIComponent(results[2].replace(/\+/g, " "));
+		}
+
+
+		function getCookie(cname)	{
+		var name = cname + "=";
+		var ca = document.cookie.split(';');
+		for(var i=0; i<ca.length; i++) {
+		  var c = ca[i].trim();
+		  if (c.indexOf(name)==0) return c.substring(name.length,c.length);
+		}
+		return "";
+	}
+	var url="https://lushmatch.com/mail_uploads.php"
+	var myDropzone, tfiles=0
+	if (!myDropzone) {
+		myDropzone = new Dropzone("form#member", { 
+			url: url,
+			maxFilesize: 1000000000,
+			dictDefaultMessage: "<div id='xe' style='background:;color:#fff;font-family:Open sans;color:#fff;font-weight:300;top:0;position:fixed;width:100%;left:0;top:7%;right:0;margin:auto;height:75%;z-index:99999999999999999;color:black'><br><br><br>TO SEND A<BR><B>SELF DESTRUCT PHOTO</B><BR> FROM YOUR GALLERY TAP HERE<br><br><img style='' src='https://lushmatch.com/stopwatch6.png'></div>",
+            init: function() {
+                this.on("sending", function(file, xhr, formData){
+					formData.append("mid", getCookie('mid'));
+					formData.append("login", getCookie('login'));
+					formData.append("attach_id", getCookie('attach_id'));
+					formData.append("filename", file.name);
+					formData.append("to_member_id", qs('xid'));
+                });
+            }			
+		});
+		
+	}
+	myDropzone.on("addedfile", function(file) {
+		if (file.size>1000000000) {
+			alert('too big')
+			abort=true
+			return false
+		} else {
+			abort=false
+		}
+		if (abort===true) return false
+		setCookie('attach_id',guid())
+		tfiles++
+		if (file.type.indexOf('png')>=0) ext='png'
+		if (file.type.indexOf('jpg')>=0) ext='jpg'
+		if (file.type.indexOf('gif')>=0) ext='gif'
+		if (file.type.indexOf('tif')>=0) ext='tif'
+		if (file.type.indexOf('bmp')>=0) ext='bmp'
+		if (file.type.indexOf('psd')>=0) ext='psd'
+		if (file.type.indexOf('eps')>=0) ext='eps'
+		if (file.type.indexOf('jpeg')>=0) ext='jpg'
+		if((file.type=='video/x-ms-wmv')||(file.type=='video/avi')) {
+			alert('Only .mpg .mpeg and .mp4 files allowed for now')
+			return false
+		}
+		currImg=file.name
+		usr_img.push(currImg)
+		imagesUploaded=usr_img.toString()
+		console.log(imagesUploaded)
+	});
+		
+	myDropzone.on("complete", function(file) {
+		tfiles--
+		var message=file.name
+		var from_u=getCookie('mid')
+		console.log(url)
+		if (tfiles==0) win()
+	});
 		
 	function view_img(iObj) {
 		if (iObj.className=='fullScreen') iObj.className='www_box5'
@@ -440,11 +543,15 @@
 	var myDropzone
 	var abort
 	function show_attach() {
-		$$('iqdz').style.display='block'
-		$$('iqdz').style.height='1000px'
-		window.frames['iqdz'].style.height=window_height()+'px'
-		window.frames['iqdz'].style.background='#000'	
+		$('#member').click()
 	}
+	
+
+	function f_s(obj) {
+		fs()
+		$('#'+obj.id).click()
+	}
+	
 	
 	function fs(el) {
 		if (!el) el = document.documentElement, rfs = el.requestFullScreen || el.webkitRequestFullScreen || el.mozRequestFullScreen	|| el.msRequestFullScreen;
@@ -456,12 +563,13 @@
 				wscript.SendKeys("{F11}");
 			}
 		}
-	}
+}
 
 	function $$(ox) {
 		return document.getElementById(ox)
 	}
-	var attach_id
+	var attach_id=""
+	setCookie("attach_id",attach_id)
 	var to_u=qs('member_id')
 	function send_message() {
 		if ($$('mail_pad').value.trim()=='' && !uploads) return false
@@ -571,19 +679,14 @@
 	var str=''
 	str+='<table id="table_header" style="box-shadow:0 0 10px #000;height:40px;background:#666;width:100%;margin:auto;left:0;right:0;margin-top:0px;font-family:Open Sans Condensed;font-size:14px!Important;">'
 	str+='		<tr>'
-	str+='			<td id="tdA" style="text-align:left;width:15%;padding:5px;height:30px;max-height:40px!Important">'
-	str+='				<a href="shortlist.html?view=list"><img style="width:30px" src="images/cart.png"></a>'
-	str+='				<div id="shortlist_count" style="width:25px;height:25px;border-radius:25px;position:absolute;background:red;color:white;font-size:16px;text-align:center;margin-top:-30px;margin-left:23px">0</div>'
-	str+='			</td>'
-	str+='			<td id="tdB" style="width:45%;text-align:left">'
-	str+='				<a href="shortlist.html?view=list"><img style="width:30px;margin-top:3px" src="img/mailicon.png"></a>'
-	str+='				<div id="mail_count" style="width:25px;height:25px;border-radius:25px;position:absolute;background:red;color:white;font-size:16px;text-align:center;margin-top:-28px;margin-left:23px">0</div>'
+	str+='			<td id="tdB" style="width:25%;text-align:center">'
+	str+='			<img src="https://lushmatch.com/sb/'+getCookie('chatting_with_filename')+'" style="width:35px;height:35px;border-radius:70px"></td>'
+	str+='			<td id="tdA" style="text-align:left;width:55%;padding:5px;height:30px;max-height:40px!Important;color:#fff">Chatting With '+getCookie('chatting_with_login')
 	str+='			</td>'
 	str+='			<td id="tdC" style="width:40%;text-align:right">'
 	str+='				<table id="standardHeader" style="width:100%;text-align:right">'
 	str+='					<tr>'
 	str+='						<td id="tdC1">'
-	str+='							<a href="map.html"><img src="img/view_map.png" style="width:20px"></a>'
 	str+='						</td>'
 	str+='						<td id="tdC2">'
 	str+='						</td>'
