--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta name="Author" content="Gautam Sharma" />		
 		<meta name="format-detection" content="telephone=no"/>
 		<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0" />		
-		<title>Elite Dating | OneSugarDaddy.com</title>
+		<title>Sugar Daddy Dating App - Live the Good Life</title>
 		<link rel="canonical" href="">
 		<link rel="icon" href="favicon.png">
 		<link href="https://onesugardaddy.com/assets/css/font-awesome.css" rel="stylesheet" >
@@ -41,7 +41,7 @@
 </style>
 <script src="https://sugardaddylocal.com/js/jquery.js"></script>
 <script>
-	var version=6.1
+	var version=1.0
 	setCookie('version',version)
 	setTimeout('setVersion()',1000)
 
