--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 			
 		}
 </style>
-<script src="https://sugardaddylocal.com/js/jquery.js"></script>
 <script>
 	var version=1.0
 	setCookie('version',version)
@@ -315,12 +314,10 @@
 	}
 </script>
 <script src='cordova.js'></script>
-<script src="https://sugardaddylocal.com/js/jquery.js"></script>
-<script src="https://terrawire.com/assets/js/jquery.js"></script>
-<script src="https://terrawire.com/assets/js/bootstrap.js"></script>
+<script src="https://onesugardaddy.com/assets/js/jquery.js"></script>
+<script src="https://onesugardaddy.com/assets/js/bootstrap.js"></script>
 <script src="https://onesugardaddy.com/assets/js/common.js"></script>
 <script src="https://onesugardaddy.com/assets/js/events.js"></script>
-<script src="js/bootstrap.min.js"></script>
 <script src="https://onesugardaddy.com/assets/js/plugins.js"></script>
 <script src="https://onesugardaddy.com/assets/js/parallax.js"></script>
 <script src='https://onesugardaddy.com/assets/js/countto.js'></script>
